--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "dsd-test",
+  "homepage": "https://stoletm.github.io/hacker-news-clone",
+  "name": "hacker-news-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
